@@ -14,9 +14,6 @@ When the minibuffer is highlighted in red, scanning more items should recheck.
 
 Selecting a region and then clicking to the right of it leaves a dot.
 
-Return in an action window without an entry should still activate the
-default.
-
 
 FEATURES FOR 1.3
 
